--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "standardize": "prettier **/*.ts --write",
     "start": "npm run standardize && ng serve --port 5000",
     "build": "npm run standardize && ng build",
+    "build:prod": "ng build --prod",
     "test": "ng test",
+    "test:prod": "npm test -- --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "predocker:build": "npm run build -- --prod --output-path dist && npm test -- --watch=false && npm run e2e",
+    "predocker:build": "npm run build",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
     "postdocker:build": "npm run docker:tag",
     "docker:tag": " cross-conf-env docker image tag $npm_package_config_imageRepo:$npm_package_version $npm_package_config_imageRepo:latest",
