Added build script to package.json and circleCI config

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "npm run standardize && ng serve --port 5000",
     "build": "npm run standardize && ng build",
     "build:prod": "ng build --prod",
+    "build:ci": "docker build -f Dockerfile.integration . -t $npm_package_config_imageRepo:latest --no-cache",
     "test": "ng test",
     "test:prod": "npm test -- --watch=false",
     "lint": "ng lint",
