--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,5 @@ jobs:
           docker_layer_caching: false
       - run:
           name: Build Docker Image
-          command: npm run build:ci
+          command: |
+            npm run build:ci
