--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,13 @@ version: 2
 jobs:
   build:
     docker:
-      - image: docker:17.12.0-ce-git
+    - image: docker:17.12.0-ce-git
     working_directory: /usr/src
     steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: false
-      - run:
-          name: Build Docker Image
-          command: |
-            npm run build:ci
+    - checkout
+    - setup_remote_docker:
+        docker_layer_caching: false
+    - run:
+        name: Build Docker Image
+        command: |
+          docker build -f Dockerfile.integration .
